--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-
+<!DOCTYPE html>
+<html>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <!-- we import arjs version without NFT but with marker + location based support -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded arjs>
+      <a-marker circle type='pattern' url="marker/pattern-sphere.patt">
+              <a-sphere 
+                position="0 0 0"
+                scale="1 1 1"        
+                radius="1.25"
+                rotation="10 43 45"
+                color="#080f41">
+                </a-sphere>
+      </a-marker>
+      <a-marker cylinder type='pattern' url="marker/pattern-cylinder.patt">
+              <a-cylinder 
+                position="0 0 0" 
+                scale="1 1 1"
+                radius="1.25" 
+                rotation="10 43 45"
+                color="#bbbbbb">
+                </a-box>
+      </a-marker>
+      <a-marker box type='pattern' url="marker/pattern-box.patt">
+              <a-box
+                position="0 0 0" 
+                scale="1 1 1"
+                radius="1.25" 
+                rotation="10 43 45"
+                color="#f69467">
+                </a-box>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
+</html>
