--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
                 scale="1 1 1"        
                 radius="1.25"
                 rotation="10 43 45"
-                color="#080f41">
+                color="#04154b">
                 </a-sphere>
       </a-marker>
       <a-marker cylinder type='pattern' url="marker/pattern-cylinder.patt">
               <a-cylinder 
                 position="0 0 0" 
-                scale="1 1 1"
+                scale="0.5 1.5 0.5"
                 radius="1.25" 
                 rotation="10 43 45"
-                color="#bbbbbb">
+                color="#e946bd">
                 </a-box>
       </a-marker>
       <a-marker box type='pattern' url="marker/pattern-box.patt">
@@ -29,7 +29,7 @@
                 scale="1 1 1"
                 radius="1.25" 
                 rotation="10 43 45"
-                color="#f69467">
+                color="#4844a2">
                 </a-box>
       </a-marker>
       <a-entity camera></a-entity>
