--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 scale="1 1 1"        
                 radius="1.25"
                 rotation="10 43 45"
-                color="#fdaa02">
+                color="#ca7f00">
                 </a-sphere>
       </a-marker>
       <a-marker cylinder type='pattern' url="marker/pattern-cylinder.patt">
