--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -29,7 +29,7 @@
             init: function () {
                 var marker = this.el;
 
-                this.vid = document.querySelector("#nissan");
+                this.vid = document.querySelector("#trex");
 
                 marker.addEventListener('markerFound', function () {
                     this.vid.play();
@@ -56,30 +56,17 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
-    <a-assets>
-        <video id="nissan" autoplay loop="true" crossorigin type="video/mp4" preload="auto" src="/image-tracking/nissan.mp4"></video>
-    </a-assets>
-    <!-- a-nft is the anchor that defines an Image Tracking entity -->
-    <!-- on 'url' use the path to the Image Descriptors created before. -->
-    <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
-    <a-nft videohandler
-      type="nft"
-      url="/image-tracking/assets/nissan"
-      smooth="true"
-      smoothCount="10"
-      smoothTolerance=".01"
-      smoothThreshold="5"
+   <a-entity
+        gltf-model="./trex.gltf"
+        look-at="[gps-camera]"
+        scale=".01 .01 .01"
+        rotation="0 180 0"
+        animation-mixer="loop:repeat"
     >
-      <!-- as a child of the a-nft entity, you can define the content to show. here's a video entity -->
-      <a-video 
-       src="#nissan" 
-	rotation='90 0 180' 
-	width='640' 
-	height='480' 
-	 >
-	</a-video>
+    </a-entity
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
     <a-entity camera></a-entity>
   </a-scene>
 </body>
+</html>
