--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -57,7 +57,7 @@
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
     <a-assets>
-        <image id="nissan" autoplay loop="true" crossorigin type="image/jpg" preload="auto" src="/image-tracking/trex.jpg"></image>
+        <image id="trex" autoplay loop="true" crossorigin type="image/jpg" preload="auto" src="/image-tracking/trex.jpg"></image>
     </a-assets>
     <!-- a-nft is the anchor that defines an Image Tracking entity -->
     <!-- on 'url' use the path to the Image Descriptors created before. -->
