--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -29,7 +29,7 @@
             init: function () {
                 var marker = this.el;
 
-                this.img = document.querySelector("#trex");
+                this.vid = document.querySelector("#nissan");
 
                 marker.addEventListener('markerFound', function () {
                     this.vid.play();
@@ -57,28 +57,27 @@
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
     <a-assets>
-        <image id="trex" autoplay loop="true" crossorigin type="image/jpg" preload="auto" src="/image-tracking/trex.jpg"></image>
+        <video id="nissan" autoplay loop="true" crossorigin type="video/mp4" preload="auto" src="/image-tracking/nissan.mp4"></video>
     </a-assets>
     <!-- a-nft is the anchor that defines an Image Tracking entity -->
     <!-- on 'url' use the path to the Image Descriptors created before. -->
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft videohandler
       type="nft"
-      url="/image-tracking/assets/trex"
+      url="/image-tracking/assets/nissan"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
       smoothThreshold="5"
     >
       <!-- as a child of the a-nft entity, you can define the content to show. here's a video entity -->
-      <a-entity 
-        gltf-model="./trex.gltf"
-        look-at="[gps-camera]"
-        scale=".01 .01 .01"
-        rotation="0 180 0"
-        animation-mixer="loop:repeat"
+      <a-video 
+       src="#nissan" 
+	rotation='90 0 180' 
+	width='640' 
+	height='480' 
 	 >
-	</a-entity>
+	</a-video>
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
     <a-entity camera></a-entity>
