--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -71,11 +71,12 @@
       smoothThreshold="5"
     >
       <!-- as a child of the a-nft entity, you can define the content to show. here's a video entity -->
-      <a-video 
-       src="#nissan" 
-	rotation='90 0 180' 
-	width='640' 
-	height='480' 
+      <a-entity
+        gltf-model="./trex.gltf"
+        look-at="[gps-camera]"
+        scale=".01 .01 .01"
+        rotation="0 180 0"
+        animation-mixer="loop:repeat"
 	 >
 	</a-video>
     </a-nft>
