--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -40,26 +40,23 @@
     <!-- a-nft is the anchor that defines an Image Tracking entity -->
     <!-- on 'url' use the path to the Image Descriptors created before. -->
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
-    <a-nft videohandler
+    <a-nft
       type="nft"
-      url="/image-tracking/trex"
+      url="<image tracking/asset/trex>"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
       smoothThreshold="5"
     >
-      <!-- as a child of the a-nft entity, you can define the content to show. here's a video entity -->
+      <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
-        gltf-model="./trex.gltf"
-        look-at="[gps-camera]"
-        scale=".01 .01 .01"
-        rotation="0 180 0"
-        animation-mixer="loop:repeat"
-	 >
-	</a-video>
+        gltf-model="<./trex.gltf>"
+        scale="5 5 5"
+        position="50 150 0"
+      >
+      </a-entity>
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
     <a-entity camera></a-entity>
   </a-scene>
 </body>
-</html>
