--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -42,7 +42,7 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
       type="nft"
-      url="<image tracking/trex>"
+      url="<image tracking/asset/trex>"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
