--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -57,10 +57,8 @@
       <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
         gltf-model="<trex.gltf>"
-        look-at="[gps-camera]"
-        scale=".01 .01 .01"
-        rotation="0 180 0"
-        animation-mixer="loop:repeat"
+        scale="5 5 5"
+        position="50 150 0"
       >
       </a-entity>
     </a-nft>
