--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -48,7 +48,7 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
       type="nft"
-      url="image tracking/trex"
+      url="image tracking/asset/trex.jpg"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
