--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -48,7 +48,7 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
       type="nft"
-      url="/image tracking/trex"
+      url="/image tracking/asset/trex"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
@@ -56,7 +56,7 @@
     >
       <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
-        gltf-model="./trex.gltf"
+        gltf-model="trex.gltf"
         scale="5 5 5"
         position="50 150 0"
       >
