--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -57,10 +57,13 @@
       <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
         gltf-model="trex.gltf"
-        scale="5 5 5"
-        position="50 150 0"
+        look-at="[gps-camera]"
+        scale=".01 .01 .01"
+        rotation="0 180 0"
+        animation-mixer="loop:repeat"
       >
       </a-entity>
+      <a-camera gps-camera rotation-reader> </a-camera>
     </a-nft>
     <!-- static camera that moves according to the device movemenents -->
     <a-entity camera></a-entity>
