--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -56,7 +56,7 @@
     >
       <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
-        gltf-model="https://github.com/fredymalabanan/fredymalabanan.github.io/blob/main/image%20tracking/trex.gltf"
+        gltf-model="trex.gltf"
         look-at="[gps-camera]"
         scale=".01 .01 .01"
         rotation="0 180 0"
