--- a/image tracking/index.html
+++ b/image tracking/index.html
@@ -48,7 +48,7 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
       type="nft"
-      url="https://github.com/fredymalabanan/fredymalabanan.github.io/blob/main/image%20tracking/trex.jpg"
+      url="/image tracking/asset/trex"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
