--- a/image-tracking/index.html
+++ b/image-tracking/index.html
@@ -23,7 +23,12 @@
     color: white;
   }
 </style>
-
+<script>
+      window.onload = () => {                       navigator.geolocation.getCurrentPosition((position) => {
+        document.querySelector('a-entity').setAttribute('gps-entity-place', `latitude: ${position.coords.latitude}; longitude: ${position.coords.longitude};`)
+      });
+     }
+    </script>
 <body style="margin : 0px; overflow: hidden;">
   <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
   <div class="arjs-loader">
@@ -37,22 +42,28 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
+    <a-assets>
+        <video id="nissan" autoplay loop="true" crossorigin type="video/mp4" preload="auto" src="/image-tracking/nissan.mp4"></video>
+    </a-assets>
     <!-- a-nft is the anchor that defines an Image Tracking entity -->
     <!-- on 'url' use the path to the Image Descriptors created before. -->
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
-    <a-nft
+    <a-nft videohandler
       type="nft"
-      url="image-tracking/asset/trex.jpg"
+      url="/image-tracking/assets/trex"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
       smoothThreshold="5"
     >
-      <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
+      <!-- as a child of the a-nft entity, you can define the content to show. here's a video entity -->
+       >
       <a-entity
-        gltf-model="trex.gltf"
-        scale="5 5 5"
-        position="50 150 0"
+        gltf-model="./trex.gltf"
+        look-at="[gps-camera]"
+        scale=".01 .01 .01"
+        rotation="0 180 0"
+        animation-mixer="loop:repeat"
       >
       </a-entity>
     </a-nft>
