--- a/image-tracking/index.html
+++ b/image-tracking/index.html
@@ -29,12 +29,14 @@
       });
      }
     </script>
-<body style="margin : 0px; overflow: hidden;">
-  <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
-  <div class="arjs-loader">
-    <div>Loading, please wait...</div>
-  </div>
-
+< 
+<body style="margin: 0; overflow: hidden;">
+    <a-scene
+      vr-mode-ui="enabled: false"
+      renderer="logarithmicDepthBuffer: true;"
+      embedded
+      arjs="sourceType: webcam; debugUIEnabled: false;"
+    >
   <!-- a-frame scene -->
   <a-scene
     vr-mode-ui="enabled: false;"
@@ -42,9 +44,7 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
-    <a-assets>
-        <video id="nissan" autoplay loop="true" crossorigin type="video/mp4" preload="auto" src="/image-tracking/nissan.mp4"></video>
-    </a-assets>
+  
     <!-- a-nft is the anchor that defines an Image Tracking entity -->
     <!-- on 'url' use the path to the Image Descriptors created before. -->
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
