--- a/image-tracking/index.html
+++ b/image-tracking/index.html
@@ -23,20 +23,13 @@
     color: white;
   }
 </style>
-<script>
-      window.onload = () => {                       navigator.geolocation.getCurrentPosition((position) => {
-        document.querySelector('a-entity').setAttribute('gps-entity-place', `latitude: ${position.coords.latitude}; longitude: ${position.coords.longitude};`)
-      });
-     }
-    </script>
-< 
-<body style="margin: 0; overflow: hidden;">
-    <a-scene
-      vr-mode-ui="enabled: false"
-      renderer="logarithmicDepthBuffer: true;"
-      embedded
-      arjs="sourceType: webcam; debugUIEnabled: false;"
-    >
+
+<body style="margin : 0px; overflow: hidden;">
+  <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
+  <div class="arjs-loader">
+    <div>Loading, please wait...</div>
+  </div>
+
   <!-- a-frame scene -->
   <a-scene
     vr-mode-ui="enabled: false;"
@@ -44,26 +37,22 @@
     embedded
     arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
   >
-  
     <!-- a-nft is the anchor that defines an Image Tracking entity -->
     <!-- on 'url' use the path to the Image Descriptors created before. -->
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
-    <a-nft videohandler
+    <a-nft
       type="nft"
-      url="/image-tracking/assets/trex"
+      url="image-tracking/asset/trex"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
       smoothThreshold="5"
     >
-      <!-- as a child of the a-nft entity, you can define the content to show. here's a video entity -->
-       >
+      <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
       <a-entity
-        gltf-model="./trex.gltf"
-        look-at="[gps-camera]"
-        scale=".01 .01 .01"
-        rotation="0 180 0"
-        animation-mixer="loop:repeat"
+        gltf-model="trex.gltf"
+        scale="5 5 5"
+        position="50 150 0"
       >
       </a-entity>
     </a-nft>
