--- a/midterm/index.html
+++ b/midterm/index.html
@@ -62,7 +62,7 @@
   <body style="margin: 0; overflow: hidden;">
     <a-scene renderer="colorManagement: true">
        <a-assets>
-        <a-asset-item id="trex" response-type="arraybuffer" src="./trex.glb"></a-asset-item>
+        <a-asset-item id="take 001" response-type="arraybuffer" src="./trex.glb"></a-asset-item>
         <audio id="roar" src="./assets/roar.wav"></audio>
       </a-assets>
       <a-entity event-listener id="trex-model"  
