--- a/midterm/index.html
+++ b/midterm/index.html
@@ -62,13 +62,13 @@
   <body style="margin: 0; overflow: hidden;">
     <a-scene renderer="colorManagement: true">
        <a-assets>
-        <a-asset-item id="trex" response-type="arraybuffer" src="./trex.glb"></a-asset-item>
+        <a-asset-item id="take 001" response-type="arraybuffer" src="./trex.glb"></a-asset-item>
         <audio id="roar" src="./assets/roar.wav"></audio>
       </a-assets>
       <a-entity event-listener id="trex-model"  
         gltf-model="#trex" 
         scale=".3 .3 .3" 
-        position = "0 0 -5" 
+        position = "8 2 1" 
         rotation="1 2 3" 
       >
       </a-entity>
