--- a/midterm/index.html
+++ b/midterm/index.html
@@ -67,9 +67,9 @@
       </a-assets>
       <a-entity event-listener id="trex-model"  
         gltf-model="#trex" 
-        scale=".0 .0 .0" 
-        position = "8 2 1" 
-        rotation="0 0 0 " 
+        scale="0.030 0.030 0.030" 
+        position = "0 0 -20" 
+        rotation="0 -74.5 0 " 
       >
       </a-entity>
       <a-sound src="#roar" autoplay="false"></a-sound>
