--- a/midterm/index.html
+++ b/midterm/index.html
@@ -15,7 +15,7 @@
 
                     console.log(e)
                     let trex = document.querySelector('#trex-model')
-		    trex.setAttribute('animation-mixer', "clip: *; loop: once;");
+		    trex.setAttribute('animation-mixer', "clip: *; loop: repeat;");
                     this.audio.play();
 			
                 }.bind(this));
@@ -38,7 +38,7 @@
 		    
 			console.log(e)
                     let trex = document.querySelector('#trex-model')
-		    trex.setAttribute('animation-mixer', "clip: *; loop: once;");
+		    trex.setAttribute('animation-mixer', "clip: *; loop: repeat;");
                     this.audio.play();
                 }.bind(this));
 		    
